# fmt-runner

./: Cargo.toml  LICENSE  Task2.md  Task3.md  Task4.md  Tasks.md
.github/workflows/: ci.yml
examples/: cli_builder_usage.rs
src/: lib.rs
src/cli/: builder.rs  cli.rs  cli_entry.rs  error.rs  handler.rs  mod.rs
src/cli/commands/: check.rs  config_loader.rs  file_collector.rs  file_reader.rs  format.rs  init.rs  mod.rs  utils.rs
src/core/: config_provider.rs  engine.rs  mod.rs  result.rs
src/parser/: language_provider.rs  mod.rs  parse_state.rs  parser.rs  parser_core.rs
src/pipeline/: context.rs  edit.rs  mod.rs  pass.rs  pipeline.rs  pipeline_core.rs
src/supported_extension/: mod.rs  supported_extension.rs
