[package]
name = "fmt-runner"
version = "0.1.0"
edition = "2021"

[lib]
name = "fmt_runner"
path = "src/lib.rs"

[dependencies]
tree-sitter = "0.25.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
serde_yaml = { version = "0.9" }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
similar = "2.5"