[package]
name = "fmt-runner"
version = "0.1.0"
edition = "2021"
authors = ["k1mb1"]
description = "A flexible code formatting runner with tree-sitter based parsing and pipeline transformations"
repository = "https://github.com/k1mb1/fmt-runner"
license = "MIT"
keywords = ["formatter", "code-formatting", "tree-sitter", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "fmt_runner"
path = "src/lib.rs"

[dependencies]
tree-sitter = "0.25.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
serde_yaml = { version = "0.9" }
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.15"
